--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:theme="@style/Theme.WaitLess_P1"
         tools:targetApi="31">
         <activity
+            android:name=".DetallePunto"
+            android:exported="false" />
+        <activity
+            android:name=".NFCActivity"
+            android:exported="false" />
+        <activity
             android:name=".TicketsActivity"
             android:exported="false" />
         <activity
             android:name=".MapaActivity"
-            android:screenOrientation="landscape"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".CancelarReservaActivity"
             android:exported="false" />
@@ -55,6 +61,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
