--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:exported="false" />
         <activity
             android:name=".Activities.DetallePuntoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".Activities.NFCActivity"
             android:exported="false" />
